--- a/css/styles.css
+++ b/css/styles.css
@@ -383,6 +383,10 @@ header {
     transform: scale(1.3);
 }
 
+#icon {
+    color:rgb(34, 31, 31);
+    font-size: 2em;
+}
 
 /* Styles for larger screens */
 @media screen and (min-width:720px) {
@@ -409,5 +413,10 @@ header {
     
     .section {
         padding-top: 50px;
+    }
+
+    #icon {
+        color:rgb(34, 31, 31);
+        font-size: 5em;
     }
 }
