--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 1em;
-    background: url('../img/Globe_1.jpg');
+    background:url(../img/background.mp4);
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -217,20 +217,68 @@ header {
 
 /* Intro section */
 .intro {
-    display: block;
+    width: 100%;
+    height: 100vh;
+    min-height: 500px;
+    overflow: hidden;
+    display:list-item;
+    justify-content: center;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
 }
 
+.intro video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100vh;
+    min-height: 500px;
+    pointer-events: none;
+}
+
 .section-title--intro {
-    padding-top: 4em;
+    padding-top: 1.5em;
+    padding-bottom: .5em;
 }
 
 .section-title--intro,
-.section-subtitle--intro {
-    text-align: center;
+.section-subtitle--intro,
+.social-list--intro,
+.social-list--item---intro,
+.social-list--link---intro{
+    position: relative;
     color: var(--clr-light);
-    max-width: 800px;  
+    text-align:center;
+    max-width: 800px;
+    z-index: 75;
+    margin:  auto;
+}
+
+.social-list--intro {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding-top: .5em;
+}
+
+.social-list--item---intro {
+    margin:.5em;
+}
+
+.social-list--link---intro {
+    padding: .5em;
+}
+
+.social-list--link---intro:hover {
+    opacity: .7;
+}
+
+#icon {
+    color:white;
+    font-size: 2em;
 }
 
 
@@ -253,7 +301,7 @@ header {
 }
 
 .about--img:hover {
-    transform:scale(1.5);
+    transform:scale(1.3);
 } 
 
 .about {
@@ -292,7 +340,7 @@ header {
 
 .skill--img {
     transition: 
-    transform 350ms cubic-bezier(.5, 0, .5, 1), 
+    transform 200ms cubic-bezier(.5, 0, .5, 1), 
     opacity 250ms linear;
 }
 
@@ -302,6 +350,10 @@ header {
 }
 
 /* Projects section */
+.social-list--item---intro:hover {
+    transform: translate(0, -10);
+}
+
 .projects {
     background: url(../img/Globe_4dark.jpg);
     background-size: cover;
@@ -384,7 +436,7 @@ header {
 }
 
 #icon {
-    color:rgb(34, 31, 31);
+    color:white;
     font-size: 2em;
 }
 
@@ -395,8 +447,13 @@ header {
         min-height: 800px;
     }
 
+    .intro,
+    .intro video {
+        min-height: 750px;
+    }
+
     .section-title--intro {
-        padding-top: 4em;
+        padding-top: 3em;
     }
 
     .section-subtitle--intro {
@@ -416,7 +473,7 @@ header {
     }
 
     #icon {
-        color:rgb(34, 31, 31);
-        font-size: 5em;
+        color:white;
+        font-size: 3em;
     }
 }
