--- a/css/styles.css
+++ b/css/styles.css
@@ -240,7 +240,7 @@ header {
 }
 
 .section-title--intro {
-    padding-top: 1.5em;
+    padding-top: 3em;
     padding-bottom: .5em;
 }
 
@@ -268,17 +268,42 @@ header {
     margin:.5em;
 }
 
+.social-list--item---intro:hover {
+    transform: translate(0, -10);
+}
+
 .social-list--link---intro {
     padding: .5em;
 }
 
 .social-list--link---intro:hover {
-    opacity: .7;
+    opacity: .5;
 }
 
 #icon {
     color:white;
     font-size: 2em;
+}
+
+.cursor {
+    display: inline-block;
+    width: 2px;
+    background-color: #ccc;
+    margin-left: 0.1rem;
+
+    animation: blink 1s infinite;
+}
+
+.cursor.typing {
+    animation: none;
+}
+
+@keyframes blink {
+    0% { background: #ccc;}
+    49% { background-color: #ccc;}
+    50% { background: transparent;}
+    99% { background: transparent;}
+    100% { background-color: #ccc;}
 }
 
 
@@ -294,15 +319,10 @@ header {
 .about--img {
     width: 200px;
     height: 250px;
-    border-radius: 50%;
     transition: all .5s;
     margin-left: auto;
     margin-right: auto;
 }
-
-.about--img:hover {
-    transform:scale(1.3);
-} 
 
 .about {
     max-width: 800px;
@@ -321,7 +341,7 @@ header {
 /* Skills section */
 .skills {
     margin: 2em;
-    max-width: 1000px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -350,9 +370,6 @@ header {
 }
 
 /* Projects section */
-.social-list--item---intro:hover {
-    transform: translate(0, -10);
-}
 
 .projects {
     background: url(../img/Globe_4dark.jpg);
@@ -373,9 +390,11 @@ header {
 
 .portfolio--item {
     overflow: hidden;
+    position: relative;
 }
 
 .portfolio--img {
+    display: block;
     transition: 
     transform 750ms cubic-bezier(.5, 0, .5, 1), 
     opacity 250ms linear;
@@ -387,11 +406,62 @@ header {
     opacity: .75;
 }
 
+.portfolio--description {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    background:rgba(0, 0, 0, .6);
+    transition: 
+    transform 750ms cubic-bezier(.5, 0, .5, 1), 
+    opacity 250ms linear;
+    opacity: 0;
+}
+
+.portfolio--description:hover {
+    transform: scale(1.05);
+    opacity: 1;
+}
+
+.portfolio--description---title {
+    color: var(--clr-light);
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h3);
+    margin-bottom: 1em;
+}
+
+.portfolio--description---detail {
+    color: var(--clr-light);
+    margin-bottom: 2em;
+    font-size: var(--fs-body);
+    margin: 1em;
+    padding: 1em;
+}
+
+.btn {
+    color: var(--clr-light);
+    font-size: 1.5em;
+}
+
+.btn:hover {
+    background-color: var(--clr-dark);
+    color: var(--clr-light);
+}
+
+.btn-pipe {
+    color: var(--clr-light);
+}
+
 
 /* Footer */
 .contact {
-    margin-bottom: 1em;
     margin-top: 0;
+    padding-top: 0;
 }
 
 .footer {
@@ -409,13 +479,8 @@ header {
     text-decoration: none;
 }
 
-.footer--link:hover,
-.social-list--link:hover {
+.social--link:hover {
     opacity: .7;
-}
-
-.footer--link:hover {
-    text-decoration: underline;
 }
 
 .social-list {
@@ -430,15 +495,17 @@ header {
     margin:.5em;
 }
 
-.social-list--link {
+.social--link {
     padding: .5em;
-    transform: scale(1.3);
+    transform: scale(1.5);
 }
 
-#icon {
-    color:white;
-    font-size: 2em;
+.copyright {
+    
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
+
 
 /* Styles for larger screens */
 @media screen and (min-width:720px) {
