--- a/css/styles.css
+++ b/css/styles.css
@@ -398,9 +398,8 @@ header {
     transition: 
     transform 750ms cubic-bezier(.5, 0, .5, 1), 
     opacity 250ms linear;
-    min-width: 100%;
-    min-height: 100%;
-   
+    width: 100%;
+    height: 100%;
 }
 
 .portfolio--img:hover,
