--- a/css/styles.css
+++ b/css/styles.css
@@ -1,56 +1,56 @@
 /* Global Layout Set-up */
 *,
 *::before,
-*::after { 
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+*::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 
 /* Custom Properties */
 :root {
-  --ff-primary: 'Source Sans Pro', sans-serif;
-  --ff-secondary: 'Source Code Pro', monospace;
+    --ff-primary: 'Source Sans Pro', sans-serif;
+    --ff-secondary: 'Source Code Pro', monospace;
 
-  --fw-reg: 300;
-  --fw-bold: 900;
+    --fw-reg: 300;
+    --fw-bold: 900;
 
-  --clr-light: #fff;
-  --clr-dark:#303030;
-  --clr-accent: rgb(92, 147, 219);
+    --clr-light: #fff;
+    --clr-dark: #303030;
+    --clr-accent: rgb(92, 147, 219);
 
-  --fs-h1: 2.75rem;
-  --fs-h2:2.00rem;
-  --fs-h3:1.15rem;
-  --fs-body:1rem;
+    --fs-h1: 2.75rem;
+    --fs-h2: 2.00rem;
+    --fs-h3: 1.15rem;
+    --fs-body: 1rem;
 
-  --bs: 0.15em 0.15em 0.50em rgba(0, 0, 0, .25);
+    --bs: 0.15em 0.15em 0.50em rgba(0, 0, 0, .25);
 }
 
 @media (min-width: 800px) {
-  :root {
-    --fs-h1: 4.5rem;
-    --fs-h2: 3.75rem;
-    --fs-h3: 1.5rem;
-    --fs-body: 1.1rem;
-  }
+    :root {
+        --fs-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.5rem;
+        --fs-body: 1.1rem;
+    }
 }
 
 
 /* General styles */
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
-  
+
 body {
-  background: var(--clr-light);
-  color: var(--clr-text);
-  font-family: var(--ff-primary);
-  font-size: var(--fs-body);
-  line-height: 1.3;
-  margin: 0 auto;
-  text-align: center;
+    background: var(--clr-light);
+    color: var(--clr-text);
+    font-family: var(--ff-primary);
+    font-size: var(--fs-body);
+    line-height: 1.3;
+    margin: 0 auto;
+    text-align: center;
 }
 
 section {
@@ -73,9 +73,17 @@ h3 {
     margin: 0;
 }
 
-h1 {font-size: var(--fs-h1);}
-h2 {font-size: var(--fs-h2);}
-h3 {font-size: var(--fs-h3);}
+h1 {
+    font-size: var(--fs-h1);
+}
+
+h2 {
+    font-size: var(--fs-h2);
+}
+
+h3 {
+    font-size: var(--fs-h3);
+}
 
 .section-title {
     margin-bottom: .1em;
@@ -105,7 +113,7 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 1em;
-    background:url(../img/background.mp4);
+    background: url(../img/background.mp4);
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -120,7 +128,7 @@ header {
 
 .nav {
     position: fixed;
-    background: var(--clr-dark);
+    background: rgba(0, 0, 0, .8);
     color: var(--clr-light);
     top: 0;
     bottom: 0;
@@ -145,7 +153,7 @@ header {
 }
 
 .nav-link {
-    color:inherit;
+    color: inherit;
     font-weight: var(--fw-bold);
     font-size: var(--fs-h3);
     text-decoration: none;
@@ -213,8 +221,13 @@ header {
     right: 0;
 }
 
-.hamburger::before { top: 6px; }
-.hamburger::after { bottom: 6px; }
+.hamburger::before {
+    top: 6px;
+}
+
+.hamburger::after {
+    bottom: 6px;
+}
 
 
 /* Intro section */
@@ -223,7 +236,7 @@ header {
     height: 100vh;
     min-height: 500px;
     overflow: hidden;
-    display:list-item;
+    display: list-item;
     justify-content: center;
     align-items: center;
     margin-left: auto;
@@ -250,13 +263,13 @@ header {
 .section-subtitle--intro,
 .social-list--intro,
 .social-list--item---intro,
-.social-list--link---intro{
+.social-list--link---intro {
     position: relative;
     color: var(--clr-light);
-    text-align:center;
+    text-align: center;
     max-width: 800px;
     z-index: 75;
-    margin:  auto;
+    margin: auto;
 }
 
 .social-list--intro {
@@ -267,7 +280,7 @@ header {
 }
 
 .social-list--item---intro {
-    margin:.5em;
+    margin: .5em;
 }
 
 .social-list--item---intro:hover {
@@ -276,7 +289,6 @@ header {
 
 .social-list--link---intro {
     padding: .5em;
-    opacity: .7;
 }
 
 .social-list--link---intro[data-descr]::after {
@@ -306,12 +318,8 @@ header {
 
 }
 
-.social-list--link---intro:hover {
-    opacity: 1;
-}
-
 #icon {
-    color:white;
+    color: white;
     font-size: 2em;
 }
 
@@ -329,18 +337,35 @@ header {
 }
 
 @keyframes blink {
-    0% { background: #ccc;}
-    49% { background-color: #ccc;}
-    50% { background: transparent;}
-    99% { background: transparent;}
-    100% { background-color: #ccc;}
+    0% {
+        background: #ccc;
+    }
+
+    49% {
+        background-color: #ccc;
+    }
+
+    50% {
+        background: transparent;
+    }
+
+    99% {
+        background: transparent;
+    }
+
+    100% {
+        background-color: #ccc;
+    }
 }
 
 
 /* About section */
 .flex {
     border-bottom: 3px solid #ccc;
-    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .flex:hover {
@@ -348,12 +373,14 @@ header {
 }
 
 .about--img {
+    display: block;
     width: 200px;
-    height: auto;
+    height: 210px;
+    border-radius: 50%;
 }
 
 .about {
-    max-width: 500px;
+    max-width: 740px;
     text-align: left;
     align-content: center;
 }
@@ -387,15 +414,10 @@ header {
 }
 
 .skill--img {
-    transition: 
-    transform 200ms cubic-bezier(.5, 0, .5, 1), 
-    opacity 250ms linear;
+    transition:
+        transform 200ms cubic-bezier(.5, 0, .5, 1),
+        opacity 250ms linear;
 }
-
-/* .skill--img:hover {
-    transform: scale(1.1);
-    opacity: .95;
-} */
 
 /* Projects section */
 
@@ -410,8 +432,10 @@ header {
 }
 
 .portfolio {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     margin: .5em;
     padding: 0;
     place-items: center;
@@ -424,11 +448,11 @@ header {
 
 .portfolio--img {
     display: block;
-    transition: 
-    transform 750ms cubic-bezier(.5, 0, .5, 1), 
-    opacity 250ms linear;
-    width: 25em;
-    height: 17em;
+    transition:
+        transform 750ms cubic-bezier(.5, 0, .5, 1),
+        opacity 250ms linear;
+    width: 31em;
+    height: 27em;
 }
 
 .portfolio--img:hover,
@@ -447,10 +471,10 @@ header {
     width: 100%;
     align-items: center;
     justify-content: center;
-    background:rgba(0, 0, 0, .6);
-    transition: 
-    transform 750ms cubic-bezier(.5, 0, .5, 1), 
-    opacity 250ms linear;
+    background: rgba(0, 0, 0, .6);
+    transition:
+        transform 750ms cubic-bezier(.5, 0, .5, 1),
+        opacity 250ms linear;
     opacity: 0;
 }
 
@@ -507,7 +531,7 @@ header {
 
 .footer a {
     display: inline-flex;
-    color:inherit;
+    color: inherit;
     text-decoration: none;
 }
 
@@ -520,23 +544,21 @@ header {
 }
 
 .social-list--item {
-    margin:.5em;
+    margin: .5em;
 }
 
 .social--link {
     padding: .5em;
     transform: scale(1.9);
-    opacity: .7;
 }
 
 .social--link:hover {
-    opacity: 1;
     transition: ease;
     transition-duration: 350ms;
 }
 
 .copyright {
-    
+
     margin-bottom: 0;
     padding-bottom: 0;
 }
@@ -569,13 +591,13 @@ header {
         justify-content: space-around;
         margin: auto;
     }
-    
+
     .section {
         padding-top: 50px;
     }
 
     #icon {
-        color:white;
+        color: white;
         font-size: 3em;
     }
 }
