--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans&display=swap');
+
 /* Global Layout Set-up */
 *,
 *::before,
@@ -10,8 +13,10 @@
 
 /* Custom Properties */
 :root {
-    --ff-primary: 'Source Sans Pro', sans-serif;
-    --ff-secondary: 'Source Code Pro', monospace;
+    --ff-primary: 'Russo One',
+        sans-serif;
+    --ff-secondary: 'Satisfy',
+        cursive;
 
     --fw-reg: 300;
     --fw-bold: 900;
@@ -102,7 +107,6 @@ h3 {
 .section-title--skills,
 .section-title--projects {
     color: var(--clr-dark);
-    font-family: var(--ff-secondary);
     margin-bottom: .1em;
     padding: .25em 1em;
 }
@@ -255,6 +259,7 @@ header {
 }
 
 .section-title--intro {
+    font-family: var(--ff-primary);
     padding-top: 3em;
     padding-bottom: .5em;
 }
@@ -270,6 +275,10 @@ header {
     max-width: 800px;
     z-index: 75;
     margin: auto;
+}
+
+.section-subtitle--intro {
+    font-family: var(--ff-secondary);
 }
 
 .social-list--intro {
@@ -390,13 +399,20 @@ header {
     margin-top: 2em;
     margin-left: auto;
     margin-right: auto;
+    font-size: 3rem;
+}
+
+.section-body--about {
+    font-family: var(--ff-secondary);
+    font-size: 1.5rem;
+    font-weight: normal;
 }
 
 
 /* Skills section */
 .skills {
     margin: 2em;
-    max-width: 1200px;
+    max-width: 800px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -404,13 +420,14 @@ header {
 .section-title--skills {
     text-align: center;
     margin-top: 2em;
+    font-size: 3rem;
 }
 
 .skills--imgs {
     justify-items: center;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 2em;
+    grid-gap: 3em;
 }
 
 .skill--img {
@@ -427,8 +444,10 @@ header {
 }
 
 .section-title--projects {
-    margin-bottom: 3em;
+    margin-top: 2rem;
+    margin-bottom: 1em;
     color: var(--clr-light);
+    font-size: 3rem;
 }
 
 .portfolio {
@@ -451,8 +470,8 @@ header {
     transition:
         transform 750ms cubic-bezier(.5, 0, .5, 1),
         opacity 250ms linear;
-    width: 31em;
-    height: 27em;
+    width: auto;
+    height: 20rem;
 }
 
 .portfolio--img:hover,
@@ -520,6 +539,10 @@ header {
     padding-top: 0;
 }
 
+.contact-title {
+    font-size: 3rem;
+}
+
 .footer {
     background: #1111;
     color: var(--clr-dark);
@@ -544,12 +567,12 @@ header {
 }
 
 .social-list--item {
-    margin: .5em;
+    /* margin: 1.5em; */
 }
 
 .social--link {
-    padding: .5em;
-    transform: scale(1.9);
+    padding: .7em;
+    transform: scale(2.5);
 }
 
 .social--link:hover {
@@ -578,11 +601,12 @@ header {
 
     .section-title--intro {
         padding-top: 3em;
+        padding-bottom: 1rem;
     }
 
     .section-subtitle--intro {
         font-weight: var(--fw-bold);
-        font-size: 1.3rem;
+        font-size: 1.5rem;
     }
 
     .flex {
@@ -598,6 +622,15 @@ header {
 
     #icon {
         color: white;
-        font-size: 3em;
+        font-size: 4em;
+    }
+
+    .skills--imgs {
+        grid-gap: 9rem;
+    }
+
+    .portfolio--img {
+        width: 31em;
+        height: 27em;
     }
 }
